--- a/administration/templates/administration/information_admin.html
+++ b/administration/templates/administration/information_admin.html
@@ -47,18 +47,18 @@
                         console.log(id);
                         {% if reported_comment %}
                             {% if comment.id != reported_comment.id %}
-                                $.post("{% url 'administration:comment_delete' %}", {id:id}, function(data){
+                                $.post("{% url 'administration:comment_delete' pk=comment.pk %}", {id:id}, function(data){
                                     //no need for this method but if we want to get a callback this is the correct position
                                     location.href = "{% url 'administration:information_reported_comment_admin' pki=comment.inf.pk pkc=reported_comment.id %}";
                                 });
                             {% else %}
-                                $.post("{% url 'administration:comment_delete' %}", {id:id}, function(data){
+                                $.post("{% url 'administration:comment_delete' pk=comment.pk  %}", {id:id}, function(data){
                                     //no need for this method but if we want to get a callback this is the correct position
                                     location.href = "{% url 'administration:information_admin' pk=comment.inf.pk %}";
                                 });
                             {% endif %}
                         {% else %}
-                            $.post("{% url 'administration:comment_delete' %}", {id:id}, function(data){
+                            $.post("{% url 'administration:comment_delete' pk=comment.pk %}", {id:id}, function(data){
                                 //no need for this method but if we want to get a callback this is the correct position
                                 location.href = "{% url 'administration:information_admin' pk=comment.inf.pk %}";
                             });
