--- a/basics/templates/basics/information_view.html
+++ b/basics/templates/basics/information_view.html
@@ -30,9 +30,14 @@
                             <div class="col-sm-12">
                                 <p class="list-group-item-text">{{ comment|get_short_text:160 }}</p>
                             </div>
-                            <div class="col-sm-12">
+                            <div class="col-sm-11" data-toggle="modal" data-target=".{{ comment.id }}">
                                 <h6><br>from: {{ comment.date }} </h6>
                             </div>
+                            {% if not user.userdata in comment.reported_by.all %}
+                              <div class="col-sm-1">
+                                <button type="button" id="{{ comment.id }}" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:report_comment' pk=comment.id%}'" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-alert"></span> Report</button>
+                              </div>
+                            {% endif %}
                         </div>
                     </a>
                 {% empty %}
