--- a/administration/templates/administration/users.html
+++ b/administration/templates/administration/users.html
@@ -72,7 +72,7 @@
                                         <div class="col-sm-9">
                                             {{ user.email }}
                                         </div>
-                                    {% if not user.is_staff %}
+                                    {% if not user.is_superuser %}
                                         <div class="col-sm-3">
                                             <a id="standard-grey-button-light" class="btn btn-default btn-sml" href="{% url 'administration:user_delete' pk=user.pk %}" title="Delete User" style="margin: 2px; float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
                                             <a id="standard-grey-button-light" class="btn btn-default btn-sml" href="{% url 'administration:make_admin' pk=user.pk %}" title="Set User as Admin" style="margin: 2px; float: right;"><span class="glyphicon glyphicon-sunglasses"></span> Admin</a>
