--- a/administration/templates/administration/users.html
+++ b/administration/templates/administration/users.html
@@ -50,8 +50,22 @@
                 </div>
             </div>
             <!-- list all or only one user -->
+            
             <div class="modal-body">
                 <div class="list-group">
+                    {% if messages %}
+                    {% for message in messages %}
+                        {% if message.message == 'user_gone' %}
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="error-messages" style="margin-top: 10px;">
+                                        <p>Another admin has already deleted this user</p>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
                     {% if usr %}
                         <div class="list-group-item" id="standard-list-group-item-div">
                             <div class="row">
