--- a/administration/templates/administration/requests.html
+++ b/administration/templates/administration/requests.html
@@ -20,7 +20,7 @@
                         {%csrf_token%}
                             <div class="form-group">
                                 <div class="col-md-8 col-sm-6">
-                                    <input type="email" class="form-control input-lg" placeholder="Email to filter" name="email" style="margin-top: 15px; margin-bottom: 15px;" required/>
+                                    <input type="email" class="form-control input-lg" placeholder="Email to filter" name="email" maxlength="254" style="margin-top: 15px; margin-bottom: 15px;" required/>
                                 </div>
                                 <div class="col-md-2 col-sm-3">
                                     <input name="filter_in_progress_requests" id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" style="margin-top: 15px;" value="Filter"/>
@@ -42,7 +42,7 @@
                                                 <div class="row">
                                                     <div class="col-sm-12">
                                                         <div class="error-messages" style="margin-top: 10px;">
-                                                            <p>There are no Requests from this E-Mail address.</p>
+                                                            <p>There are no requests from this E-Mail address.</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -51,7 +51,7 @@
                                     {% endif %}
                                     <div class="row">
                                         <div class="col-sm-8">
-                                            <input type="email" class="form-control input-lg" placeholder="Email to filter" name="email" style="margin-top: 15px; margin-bottom: 15px;" required/>
+                                            <input type="email" class="form-control input-lg" placeholder="Email to filter" name="email" maxlength="254" style="margin-top: 15px; margin-bottom: 15px;" required/>
                                         </div>
                                         <div class="col-sm-4">
                                             <input name="filter_in_progress_requests" id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" style="margin-top: 15px;" value="Filter"/>
@@ -79,7 +79,13 @@
                                         <h6><br>by {{ request.email }} from {{ request.create_date }}</h6>
                                     </div>
                                     <div class="col-sm-1">
-                                        <button type="button" id="{{ request.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right; margin-top: 10px;" onclick="done_request(this)"><span class="glyphicon glyphicon-ok"></span> Done</button>
+                                        <form class="form" role="form" method="post" accept-charset="UTF-8">
+                                        {%csrf_token%}
+                                            <div class="form-group" style="display: none;">
+                                                <input class="form-control" name="key" value="{{ request.pk }}"/>
+                                            </div>
+                                            <button name="done_requests_with_filter" type="submit" id="standard-grey-button-light" class="btn btn-default btn-sml" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-ok"></span> Done</button>
+                                        </form>
                                     </div>
                                 </div>
                             </a>
@@ -120,7 +126,13 @@
                                         <h6><br>by {{ request.email }} from {{ request.create_date }}</h6>
                                     </div>
                                     <div class="col-sm-1">
-                                        <button type="button" id="{{ request.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right; margin-top: 10px;" onclick="done_request(this)"><span class="glyphicon glyphicon-ok"></span> Done</button>
+                                        <form class="form" role="form" method="post" accept-charset="UTF-8">
+                                        {%csrf_token%}
+                                            <div class="form-group" style="display: none;">
+                                                <input class="form-control" name="key" value="{{ request.pk }}"/>
+                                            </div>
+                                            <button name="done_requests_without_filter" type="submit" id="standard-grey-button-light" class="btn btn-default btn-sml" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-ok"></span> Done</button>
+                                        </form>
                                     </div>
                                 </div>
                             </a>
@@ -172,7 +184,7 @@
                         {%csrf_token%}
                             <div class="form-group">
                                 <div class="col-md-8 col-sm-6">
-                                    <input type="email" class="form-control input-lg" placeholder="Email to filter" name="email" style="margin-top: 15px; margin-bottom: 15px;" required/>
+                                    <input type="email" class="form-control input-lg" placeholder="Email to filter" name="email" maxlength="254" style="margin-top: 15px; margin-bottom: 15px;" required/>
                                 </div>
                                 <div class="col-md-2 col-sm-3">
                                     <input name="filter_new_requests" id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" style="margin-top: 15px;" value="Filter"/>
@@ -195,7 +207,7 @@
                                                 <div class="row">
                                                     <div class="col-sm-12">
                                                         <div class="error-messages" style="margin-top: 10px;">
-                                                            <p>There are no Requests from this E-Mail address.</p>
+                                                            <p>There are no requests from this E-Mail address.</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -204,7 +216,7 @@
                                     {% endif %}
                                     <div class="row">
                                         <div class="col-sm-8">
-                                            <input type="email" class="form-control input-lg" placeholder="Email to filter" name="email" style="margin-top: 15px; margin-bottom: 15px;" required/>
+                                            <input type="email" class="form-control input-lg" placeholder="Email to filter" name="email" maxlength="254" style="margin-top: 15px; margin-bottom: 15px;" required/>
                                         </div>
                                         <div class="col-sm-4">
                                             <input name="filter_new_requests" id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" style="margin-top: 15px;" value="Filter"/>
@@ -246,7 +258,13 @@
                                     </div>
 
                                     <div class="col-sm-1">
-                                        <button type="button" id="{{ request.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right; margin-top: 10px;" onclick="location.href='{% url 'administration:admin_work_on_request' pk=request.pk %}'"><span class="glyphicon glyphicon-pencil"></span> Work On</button>
+                                        <form class="form" role="form" method="post" accept-charset="UTF-8">
+                                        {%csrf_token%}
+                                            <div class="form-group" style="display: none;">
+                                                <input class="form-control" name="key" value="{{ request.pk }}"/>
+                                            </div>
+                                            <button name="works_on_requests_with_filter" type="submit" id="standard-grey-button-light" class="btn btn-default btn-sml" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-pencil"></span> Work On</button>
+                                        </form>
                                     </div>
                                 </div>
                             </a>
@@ -290,7 +308,13 @@
                                     </div>
 
                                     <div class="col-sm-1">
-                                        <button type="button" id="{{ request.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right; margin-top: 10px;" onclick="location.href='{% url 'administration:admin_work_on_request' pk=request.pk %}'"><span class="glyphicon glyphicon-pencil"></span> Work On</button>
+                                        <form class="form" role="form" method="post" accept-charset="UTF-8">
+                                        {%csrf_token%}
+                                            <div class="form-group" style="display: none;">
+                                                <input class="form-control" name="key" value="{{ request.pk }}"/>
+                                            </div>
+                                            <button name="works_on_requests_without_filter" type="submit" id="standard-grey-button-light" class="btn btn-default btn-sml" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-pencil"></span> Work On</button>
+                                        </form>
                                     </div>
                                 </div>
                             </a>
@@ -329,16 +353,4 @@
 
 </div> <!-- close container -->
 
-<script>
-
-  function done_request(element){
-      var id = element.id;
-      console.log(id);
-      $.post("{% url 'administration:request_done' %}", {id:id}, function(data){
-          //no need for this method but if we want to get a callback this is the correct position
-          location.href = "{% url 'administration:requests' %}";
-      });
-  }
-
-</script>
 {% endblock %}
