--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -18,6 +18,10 @@
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="{% static 'basics/js/bootstrap.min.js' %}"></script>
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+	<script src="https://fb.me/react-15.0.2.js"></script>
+	<script src="https://fb.me/react-dom-15.0.2.js"></script>
+	<script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+
 	<style>
 		* {
 	    		margin: 0;
@@ -91,7 +95,7 @@
 									<li {% if "/information_timeline/" in request.path %} id="active-dropdown" {% endif %}><a href="{% url 'basics:information_timeline' %}">Timeline</a></li>
 								</ul>
 							</li>					<!-- insert URL for needs and create if for class = active-->
-							<li id="navbar-with-divider" {% if "/chat/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:chat' %}">Chats</a></li>
+							<li id="navbar-with-divider" {% if "/chat/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:chat' %}">Chats  <span class="badge" id="badge-container"></span></a></li>
 							<li {% if "/groups/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:groups' %}">Groups</a></li>
 						</ul>
 
@@ -216,4 +220,51 @@
 		</div>
 	</div>
 	</body>
+	<script>
+	(function (React, ReactDOM, window, document, MDL) {
+	  'use strict';
+
+
+	  var BadgeContainer = React.createClass({
+	    displayName: 'RoomsContainer',
+
+	    getInitialState: function getInitialState() {
+	      var rooms = eval({{channels|safe}})
+	      console.log(rooms)
+	      var ws_scheme = window.location.protocol == "https:" ? "wss" : "ws";
+	      for(var i=0;i<rooms.length;i++){
+	        name = rooms[i]['hash'];
+	        console.log(name);
+	        var url = ws_scheme + '://' + window.location.host + "/chat/" + name + '?username={{request.user.username}}';
+	        var socket = new WebSocket(url);
+
+	        socket.onmessage = function(message) {
+	            this.setState({
+	              new_count:this.state.new_count+1
+	            });
+	        }.bind(this);
+	      }
+	      return {
+	        new_count:0
+	      };
+	    },
+
+
+	    render: function render(){
+	      if(this.state.new_count > 0){
+
+		      return React.createElement(
+						'span',
+						{className:'badge'},
+						this.state.new_count
+					);
+				}
+				else{
+					return null;
+				}
+	  	}
+		});
+	  ReactDOM.render(React.createElement(BadgeContainer, null), document.getElementById('badge-container'));
+	})(React, ReactDOM, window, document, componentHandler);
+</script>
 </html>
