--- a/basics/templates/basics/chat.html
+++ b/basics/templates/basics/chat.html
@@ -14,8 +14,8 @@
     <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 
   <body>
-  <div class = "row">
-    <div class="col-md-4">
+  <div class = "row" style="box-shadow: 0 0 30px black; height:70%" >
+    <!--<div class="col-md-4">
       <div class="card card-block">
         <h4 class="card-title">Card title</h4>
 
@@ -33,8 +33,16 @@
           {% endfor %}
       </div>
       <a href="{% url 'basics:kick_user' roomname=roomname %}" class="btn btn-primary">Kick User</a>
+    </div>-->
+    <div class="col-md-4" style="background-color: #d1d1d1; height:100%">
+      <div class="card card-block" >
+        <h4 class="card-title">Card title</h4>
+          <div id="rooms-container">
+          </div>
+      </div>
+      <a href="{% url 'basics:kick_user' roomname=roomname %}" class="btn btn-primary">Kick User</a>
     </div>
-    <div id="app"></div>
+    <div class="col-md-8" id="app"></div>
     </div>
     <script>
 'use strict';
@@ -293,17 +301,17 @@
     componentDidMount: function componentDidMount() {
       this.createSocket();
 
-      this.chatBox.querySelector('.message-list').style.bottom = this.chatBox.querySelector('.actions-container').offsetHeight + 'px';
+      this.chatBox.querySelector('.message-list').style.bottom = this.chatBox.querySelector('.actions-containers').offsetHeight + 'px';
 
       window.addEventListener('resize', function () {
-        this.chatBox.querySelector('.message-list').style.bottom = this.chatBox.querySelector('.actions-container').offsetHeight + 'px';
+        this.chatBox.querySelector('.message-list').style.bottom = this.chatBox.querySelector('.actions-containers').offsetHeight + 'px';
       }.bind(this));
 
       MDL.upgradeDom();
     },
 
     componentDidUpdate: function componentDidUpdate() {
-      this.chatBox.querySelector('.message-list').style.bottom = this.chatBox.querySelector('.actions-container').offsetHeight + 'px';
+      this.chatBox.querySelector('.message-list').style.bottom = this.chatBox.querySelector('.actions-containers').offsetHeight + 'px';
 
       MDL.upgradeDom();
     },
@@ -340,8 +348,13 @@
 
       return React.createElement(
         'div',
-        { className: 'mdl-shadow--2dp chat-box mdl-cell mdl-cell--4-col mdl-cell--stretch', ref: this.getNodeRef },
+        { className: ' mdl-cell--stretch', ref: this.getNodeRef },
         !this.state.connected ? React.createElement(LoadingBar, null) : null,
+        React.createElement(
+          'h4',
+          {},
+          this.state.channel
+        ),
         React.createElement(
           MessageList,
           null,
@@ -349,7 +362,7 @@
         ),
         React.createElement(
           'div',
-          { className: 'actions-container mdl-shadow--3dp ' + visibilityClass },
+          { className: 'actions-containers mdl-shadow--3dp ' + visibilityClass },
           /*React.createElement(ChannelSelector, {
             currentChannel: this.state.channel,
             handleChatChange: this.handleChatChange }),*/
@@ -360,26 +373,111 @@
 
   });
 
+  var Room = function Room(props){
+    return React.createElement(
+      'a',
+      {className:'goupe-list-element', id:'standard-list-group-item-div', href:"/chat/"+props['room']['hash'] },
+      React.createElement(
+        'div',
+        {className:'row '},
+        React.createElement(
+          'div',
+          {className:'col-sm-12'},
+          React.createElement(
+            'div',
+            {className:'card card-block'},
+            React.createElement(
+              'h3',
+              {className:'card-title'},
+              props['room']['name']
+            ),
+            React.createElement(
+              'p',
+              {className:'card-text'},
+              props['room']['date']
+            )
+          )
+        )
+      )
+    )
+  };
+  var RoomsContainer = React.createClass({
+    displayName: 'RoomsContainer',
+
+    getInitialState: function getInitialState() {
+      var rooms = eval({{rooms_json|safe}})
+      console.log(rooms)
+      var ws_scheme = window.location.protocol == "https:" ? "wss" : "ws";
+      for(var i=0;i<rooms.length;i++){
+        name = rooms[i]['hash'];
+        console.log(name);
+        var url = ws_scheme + '://' + window.location.host + "/chat/" + name + '?username={{request.user.username}}';
+        var socket = new WebSocket(url);
+
+        socket.onmessage = function(message) {
+            var j = 0;
+            var room = JSON.parse(message.data)['room'];
+            for(j=0;j<rooms.length;j++){
+              console.log(rooms[j]['hash'], room);
+              if(rooms[j]['hash'] === room){
+                //TODO: Change value of date; we need some sort of flag for messages if they where read
+                break;
+              }
+            };
+
+            rooms.unshift(rooms.splice(j,1)[0]);
+            console.log(rooms);
+            this.setState({
+              rooms:rooms
+            });
+        }.bind(this);
+      }
+      return {
+        rooms: rooms
+      };
+    },
+
+
+    render: function render() {
+      var rendered_rooms = []
+      for(var i =0;i<this.state.rooms.length;i++){
+        rendered_rooms.push(React.createElement(Room, {key:i, room:this.state.rooms[i], handleClick:this.handleClick}))
+      }
+      return React.createElement(
+        'div',
+        { className: '', ref: this.getNodeRef, },
+        React.createElement(
+          'div',
+          {className:'list-group'},
+          rendered_rooms
+        )
+      );
+    }
+  })
   //Initialisiere 2 Chats
 
   var App = React.createClass({
     displayName: 'App',
 
-
     getInitialState: function getInitialState() {
       return {
-        chats: 1
+        chats: 1,
+        chatContainer: null
       };
     },
 
+    alert_some : function alert_some(){
+      alert("fuckers")
+    },
+
     render: function render() {
-      var chats = [];
-      chats.push(React.createElement(ChatContainer, { key: 0 }));
-      return React.createElement('div',{ className: 'mdl-grid' },chats)
+      this.state.chatContainer = React.createElement(ChatContainer, { key: 0 });
+      return React.createElement('div',{ className: '' } ,this.state.chatContainer)
     }
   });
 
   ReactDOM.render(React.createElement(App, null), document.getElementById('app'));
+  ReactDOM.render(React.createElement(RoomsContainer, null), document.getElementById('rooms-container'));
 })(React, ReactDOM, window, document, componentHandler);
 
   window.onbeforeunload = function(){
@@ -390,7 +488,51 @@
     }
   };
 </script>
+<script>
 
+(function (React, ReactDOM, window, document, MDL) {
+  'use strict';
+
+  /*var ws_scheme = window.location.protocol == "https:" ? "wss" : "ws";
+  var rooms = eval({{rooms_json|safe}})
+  console.log(rooms)
+  for(var i=0;i<rooms.length;i++){
+    name = rooms[i]['name'];
+    console.log(name);
+    var url = ws_scheme + '://' + window.location.host + "/chat/" + name + '?username={{request.user.username}}';
+    var socket = new WebSocket(url);
+
+    socket.onmessage = function(message) {
+        alert(message.data);
+    };
+  }*/
+  var Message = function Message(props) {
+    var classString = props.ownMessage ? 'own ' : '';
+    return React.createElement(
+      'div',
+      { className: classString + 'message clearfix' },
+      React.createElement(
+        'div',
+        { className: 'message__author' },
+        props.ownMessage ? 'You' : 'Other'         //props.author
+      ),
+      React.createElement('div', { className: 'message__avatar' }),
+      React.createElement(
+        'div',
+        { className: classString + 'message__text' },
+        props.text
+      )
+    );
+  }
+
+
+
+
+
+})(React, ReactDOM, window, document, componentHandler);
+
+
+</script>
   </body>
 
 {% endblock %}
