--- a/administration/templates/administration/needs.html
+++ b/administration/templates/administration/needs.html
@@ -67,7 +67,7 @@
                                     <h6><br>from: {{ need.date }} / category: {{ need.categorie.name }} / number of reports: {{ need.number_reports }}</h6>
                                 </div>
                                 <div class="col-sm-1">
-                                    <button type="button" id="{{ need.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right; margin-top: 10px;" onclick="done_request(this)"><span class="glyphicon glyphicon-remove"></span> Delete</button>
+                                    <button type="button" class="btn btn-default btn-sml standard-grey-button-light " style="float: right; margin-top: 10px;" onclick="location.href='{% url 'administration:need_delete' pk=need.pk %}'"><span class="glyphicon glyphicon-remove"></span> Delete</button>
                                 </div>
                             </div>
                         </a>
@@ -101,16 +101,6 @@
     </div>
 </div><!-- end needs -->
 
- <script>
-  function done_request(element){
-      var id = element.id;
-      console.log(id);
-      $.post("{% url 'administration:need_delete' %}", {id:id}, function(data){
-          //no need for this method but if we want to get a callback this is the correct position
-          location.href = "{% url 'administration:needs' %}";
-      });
-  }
 
-</script>
 
 {% endblock %}
