--- a/administration/templates/administration/groups.html
+++ b/administration/templates/administration/groups.html
@@ -161,6 +161,9 @@
                                     <div class="col-sm-10">
                                         {{ group.group.name }}
                                     </div>
+                                    <div class="col-sm-10">
+                                        
+                                    </div>
                                     <div class="col-sm-2">
                                         <a id="standard-grey-button-light" class="btn btn-default btn-sml" href="{% url 'administration:group_delete' pk=group.pk %}" title="Delete Group" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
                                     </div>
