--- a/administration/templates/administration/information_admin.html
+++ b/administration/templates/administration/information_admin.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups" style="float: right">
-                            <a id="standard-grey-button-light" class="btn btn-default btn-sml" type="button" href="{% url  'administration:info_delete' pk=information.pk %}" style="margin-top: 15px; margin-bottom: 15px;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
+                            <a id="standard-grey-button-light" class="btn btn-default btn-sml" type="button" href="{% url  'administration:information_delete' pk=information.pk %}" style="margin-top: 15px; margin-bottom: 15px;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
                             <a id="standard-grey-button-light" class="btn btn-default btn-sml" type="button" href="{% url 'administration:informations' %}" style="margin-top: 15px; margin-bottom: 15px;"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
                     </div>
                 </div>
