fix error messages

--- a/administration/templates/administration/categories.html
+++ b/administration/templates/administration/categories.html
@@ -102,7 +102,7 @@
 							{% elif message.message == 'categorie_gone' %}
                                 <div class="form-group">
                                     <div class="error-messages">
-                                        <p>Another admin has already deleted this categorie</p>
+                                        <p>Another admin has already deleted this category!</p>
                                     </div>
                                 </div>
                             {% endif%}
