--- a/administration/templates/administration/information_admin.html
+++ b/administration/templates/administration/information_admin.html
@@ -30,7 +30,7 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="error-messages" style="margin-top: 10px;">
-                                        <p>Another admin or user already deleted this comment</p>
+                                        <p>Another admin or user already deleted this comment!</p>
                                     </div>
                                 </div>
                             </div>
