--- a/administration/templates/administration/informations.html
+++ b/administration/templates/administration/informations.html
@@ -34,7 +34,7 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="error-messages" style="margin-top: 10px;">
-                                        <p>Another admin or user already deleted this information</p>
+                                        <p>Another admin or user already deleted this information!</p>
                                     </div>
                                 </div>
                             </div>
@@ -47,7 +47,7 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="error-messages" style="margin-top: 10px;">
-                                        <p>Another admin or user already deleted this comment</p>
+                                        <p>Another admin or user already deleted this comment!</p>
                                     </div>
                                 </div>
                             </div>
@@ -81,7 +81,7 @@
                         <h4>There are no informations.</h4>
                     {% endfor %}
                 {% endif %}
-                
+
                 {% if comments %}
                     {% for comment in comments %}
                         <!-- list all informations -->
