--- a/administration/templates/administration/requests.html
+++ b/administration/templates/administration/requests.html
@@ -235,7 +235,7 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="error-messages" style="margin-top: 10px;">
-                                        <p>Another admin is already working on this request.</p>
+                                        <p>Another admin is already working on this request!</p>
                                     </div>
                                 </div>
                             </div>
