--- a/administration/templates/administration/users.html
+++ b/administration/templates/administration/users.html
@@ -59,7 +59,7 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="error-messages" style="margin-top: 10px;">
-                                        <p>Another admin has already deleted this user</p>
+                                        <p>Another admin has already deleted this user.</p>
                                     </div>
                                 </div>
                             </div>
