--- a/administration/templates/administration/groups.html
+++ b/administration/templates/administration/groups.html
@@ -134,7 +134,7 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="error-messages" style="margin-top: 10px;">
-                                        <p>Another admin has already deleted this group</p>
+                                        <p>Another admin has already deleted this group!</p>
                                     </div>
                                 </div>
                             </div>
@@ -162,7 +162,7 @@
                                         {{ group.group.name }}
                                     </div>
                                     <div class="col-sm-10">
-                                        
+
                                     </div>
                                     <div class="col-sm-2">
                                         <a id="standard-grey-button-light" class="btn btn-default btn-sml" href="{% url 'administration:group_delete' pk=group.pk %}" title="Delete Group" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
