--- a/administration/templates/administration/needs.html
+++ b/administration/templates/administration/needs.html
@@ -29,7 +29,7 @@
                     </select>
                 </div>
                 <script>
-                
+
                 </script>
                 <div  class="col-sm-2" style="margin-top: 10px; margin-bottom: 10px;">
                     <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Filter"/>
@@ -45,7 +45,7 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="error-messages" style="margin-top: 10px;">
-                                        <p>Another admin or user already deleted this need</p>
+                                        <p>Another admin or user already deleted this need!</p>
                                     </div>
                                 </div>
                             </div>
